--- a/datastore/linstor_un/linstor_un.conf
+++ b/datastore/linstor_un/linstor_un.conf
@@ -17,6 +17,7 @@
 # Paths for utilities
 LINSTOR=${LINSTOR:-linstor}
 JQ=${JQ:-jq}
+SORT=${SORT:-sort}
 
 # Staging directory
 #   A directory in the Ceph server host where image will be transferred to
