Use dd instead of cat for sparse feature

--- a/datastore/linstor_un/linstor_un.conf
+++ b/datastore/linstor_un/linstor_un.conf
@@ -19,8 +19,14 @@ LINSTOR=${LINSTOR:-linstor}
 JQ=${JQ:-jq}
 CURL="${CURL:-curl}"
 
+# Block size for the dd commands
+DD_BLOCK_SIZE=64k
+
+# Comma-separated conv options for the dd commands
+DD_CONV=sync,sparse
+
 # Staging directory
-#   A directory in the Ceph server host where image will be transferred to
+#   A directory on the Linstor server host where image will be transferred to
 #   temporarily during the create/mkfs processes. This directoy MUST exist,
 #   have enough space and be writeable by 'oneadmin'
 STAGING_DIR=/var/tmp
