disable conv=sync by default

--- a/datastore/linstor_un/linstor_un.conf
+++ b/datastore/linstor_un/linstor_un.conf
@@ -23,7 +23,7 @@ CURL="${CURL:-curl}"
 DD_BLOCK_SIZE=64k
 
 # Comma-separated conv options for the dd commands
-DD_CONV=sync,sparse
+DD_CONV=sparse
 
 # Staging directory
 #   A directory on the Linstor server host where image will be transferred to
